--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
   "devDependencies": {
     "eslint": "^1.10.1",
     "eslint-config-ponko2": "^1.3.0"
+  },
+  "peerDependencies": {
+    "laravel-elixir": ">=3.0.0-0 <6.0.0-0"
   }
 }
