--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Laravel Elixir SCSS-Lint Extension",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -32,8 +32,8 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "eslint": "^1.10.1",
-    "eslint-config-ponko2": "^1.3.0"
+    "eslint": "^3.0.1",
+    "eslint-config-ponko2": "^4.2.0"
   },
   "peerDependencies": {
     "laravel-elixir": ">=3.0.0-0 <6.0.0-0"
