--- a/package.json
+++ b/package.json
@@ -1,27 +1,11 @@
 {
   "name": "laravel-elixir-scss-lint",
-  "version": "1.3.0",
   "description": "Laravel Elixir SCSS-Lint Extension",
-  "main": "index.js",
-  "scripts": {
-    "lint": "eslint ."
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ponko2/laravel-elixir-scss-lint.git"
-  },
-  "keywords": [
-    "laravel",
-    "elixir",
-    "scss-lint",
-    "gulp"
-  ],
+  "version": "1.3.0",
   "author": "Takahito Nakano",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/ponko2/laravel-elixir-scss-lint/issues"
   },
-  "homepage": "https://github.com/ponko2/laravel-elixir-scss-lint",
   "dependencies": {
     "events": "^1.1.0",
     "gulp-scss-lint": "^0.3.8",
@@ -35,7 +19,23 @@
     "eslint": "^3.0.1",
     "eslint-config-ponko2": "^4.2.0"
   },
+  "homepage": "https://github.com/ponko2/laravel-elixir-scss-lint",
+  "keywords": [
+    "elixir",
+    "gulp",
+    "laravel",
+    "scss-lint"
+  ],
+  "license": "MIT",
+  "main": "index.js",
   "peerDependencies": {
     "laravel-elixir": ">=3.0.0-0 <6.0.0-0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ponko2/laravel-elixir-scss-lint.git"
+  },
+  "scripts": {
+    "lint": "eslint ."
   }
 }
