ファイルを分割

--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "gulp-scss-lint": "^0.3.8",
     "gulp-util": "^3.0.7",
     "map-stream": "^0.1.0",
+    "object-assign": "^4.1.0",
+    "pluralize": "^3.0.0",
     "string-length": "^1.0.1",
-    "text-table": "^0.2.0",
-    "underscore": "^1.8.3"
+    "text-table": "^0.2.0"
   },
   "devDependencies": {
     "eslint": "^3.0.1",
