ES2015で書き直すための準備

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,8 +3,5 @@
   "env": {
     "node": true
   },
-  "extends": "ponko2/legacy",
-  "rules": {
-    "require-jsdoc": "off"
-  }
+  "extends": "ponko2"
 }
