--- a/package.json
+++ b/package.json
@@ -17,12 +17,18 @@
     "text-table": "^0.2.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.10.1",
+    "babel-plugin-transform-object-assign": "^6.8.0",
+    "babel-preset-es2015": "^6.9.0",
     "eslint": "^3.0.1",
     "eslint-config-ponko2": "^4.2.0"
   },
   "engines": {
     "node": ">=4"
   },
+  "files": [
+    "lib"
+  ],
   "homepage": "https://github.com/ponko2/laravel-elixir-scss-lint",
   "keywords": [
     "elixir",
@@ -31,7 +37,7 @@
     "scss-lint"
   ],
   "license": "MIT",
-  "main": "index.js",
+  "main": "lib/index.js",
   "peerDependencies": {
     "laravel-elixir": ">=3.0.0-0 <6.0.0-0"
   },
@@ -40,6 +46,9 @@
     "url": "https://github.com/ponko2/laravel-elixir-scss-lint.git"
   },
   "scripts": {
-    "lint": "eslint ."
+    "build": "babel src --out-dir lib --source-maps inline",
+    "lint": "eslint .",
+    "prepublish": "npm run --if-present build",
+    "watch": "babel src --out-dir lib --watch --source-maps inline"
   }
 }
