Lintでひっかかった場所を修正

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,5 +3,9 @@
   "env": {
     "node": true
   },
-  "extends": "ponko2"
+  "extends": "ponko2",
+  "globals": {
+    "gulp": false,
+    "Elixir": false
+  }
 }
