--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "laravel-elixir-scss-lint",
   "description": "Laravel Elixir SCSS-Lint Extension",
-  "version": "1.3.1",
+  "version": "2.0.0-0",
   "author": "Takahito Nakano",
   "bugs": {
     "url": "https://github.com/ponko2/laravel-elixir-scss-lint/issues"
